[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://editor/ui/terrain_panel.gd" id="1_terrain_panel"]

[node name="TerrainPanel" type="VBoxContainer"]
script = ExtResource("1_terrain_panel")

[node name="MountainPercentRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="MountainPercentRow"]
layout_mode = 2
text = "Mountain %:"

[node name="MountainPercentSpinBox" type="SpinBox" parent="MountainPercentRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 25.0

[node name="ThresholdRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ThresholdRow"]
layout_mode = 2
text = "Threshold:"

[node name="ThresholdSpinBox" type="SpinBox" parent="ThresholdRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5

[node name="SeedRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SeedRow"]
layout_mode = 2
text = "Seed:"

[node name="SeedSpinBox" type="SpinBox" parent="SeedRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -1e+09
max_value = 1e+09
allow_greater = true
allow_lesser = true

[node name="NewSeedButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "New Seed"

[connection signal="value_changed" from="MountainPercentRow/MountainPercentSpinBox" to="." method="_on_mountain_percent_spin_box_value_changed"]
[connection signal="value_changed" from="ThresholdRow/ThresholdSpinBox" to="." method="_on_threshold_spin_box_value_changed"]
[connection signal="value_changed" from="SeedRow/SeedSpinBox" to="." method="_on_seed_spin_box_value_changed"]
[connection signal="pressed" from="NewSeedButton" to="." method="_on_regenerate_button_pressed"]
